# OpenGL-Engine

./: CMakeLists.txt  Camera.cpp  Camera.hpp  Engine.cpp  Engine.h  README.md  main.cpp
Graphics/: Shaders.cpp  Shaders.h
OpenGL Engine/: CMakeLists.txt  Engine.cpp  Engine.h  main.cpp
OpenGL Engine.xcodeproj/: project.pbxproj
OpenGL Engine.xcodeproj/project.xcworkspace/xcuserdata/jeremiahkorreck.xcuserdatad/: UserInterfaceState.xcuserstate
OpenGL Engine.xcodeproj/xcuserdata/jeremiahkorreck.xcuserdatad/xcschemes/: OpenGL Engine.xcscheme  xcschememanagement.plist
OpenGL Engine/Graphics/: Shaders.cpp  Shaders.h
OpenGL Engine/Resources/shaders/: fragmentShader.glsl  vertexShader.glsl
Resources/shaders/: fragmentShader.glsl  lampVertexShader.glsl  lightingFragmentShader.glsl  vertexShader.glsl
cmake/: FindSOIL.cmake
